# tadakayo-qr-charity-connect

./: .envrc  .gitignore  CLAUDE.md  README.md  index.html
.github/workflows/: ci.yml  deploy-sandbox.yml
.serena/: project.yml
docs/: README.md  ai-development.md  api-spec.md  architecture.md  data-model.md  design.html  env-secrets.md  index.html  monitoring.md  operations.md  payment-provider-application.md  roadmap.md  tech-stack.md  testing.md
docs/adr/: ADR-001-gcp-cloud-run.md  ADR-002-cloud-nat-fixed-ip.md  ADR-003-firestore-nosql.md  ADR-004-payment-provider-selection.md  ADR-005-fixed-amount-qr.md
docs/audit/: 2026-01-25-doc-audit.md
docs/handoff/: LATEST.md
docs/research/: 2026-01-11-qr-payment-research.md
infrastructure/environments/sandbox/: backend.tf  main.tf  variables.tf
src/: .env.example  Dockerfile  pyproject.toml
src/app/: __init__.py  config.py  main.py
src/app/adapters/: __init__.py  base.py  paypay.py  rakuten.py
src/app/api/: __init__.py  donations.py
src/app/models/: __init__.py  donation.py
src/app/repositories/: __init__.py  donation.py
src/app/services/: __init__.py  payment.py
src/app/static/: cancel.html  donate.html  mock-payment.html  pay.html  print-donate.html  print.html  qr-payment.html  thanks.html
src/scripts/: test_paypay_sandbox.py
src/tests/: conftest.py
src/tests/unit/: test_adapters.py  test_api.py  test_models.py  test_services.py
video/: .gitignore  package-lock.json  package.json  tsconfig.json
video/src/: HorizontalVideo.tsx  Root.tsx  ShortVideo.tsx
video/src/components/: Logo.tsx  (+1 more)
(+20 files in other folders)
